Fix an issue causing layout problems

--- a/src/Assets/Sass/Components/App.sass
+++ b/src/Assets/Sass/Components/App.sass
@@ -10,3 +10,6 @@
 .v-content__wrap
     align-items: stretch
     display: flex
+    
+    > div
+        flex-grow: 1
